--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
   "dependencies": {
     "next": "13.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sass": "^1.61.0"
+  },
+  "devDependencies": {
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.33",
+    "typescript": "^5.0.4"
   }
 }
