--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "13.3.0",
+    "next-auth": "^3.22.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
@@ -17,6 +18,7 @@
     "stripe": "^12.0.0"
   },
   "devDependencies": {
+    "@types/next-auth": "^3.15.0",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.33",
     "typescript": "^5.0.4"
