--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^1.52.1",
+    "axios": "^1.3.5",
     "faunadb": "^4.8.0",
     "next": "13.3.0",
     "next-auth": "^3.22.0",
