--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "slicemachine": "start-slicemachine"
   },
   "dependencies": {
+    "@prismicio/client": "^6.7.3",
+    "@prismicio/helpers": "^2.3.9",
+    "@prismicio/next": "^1.0.3",
+    "@prismicio/react": "^2.5.2",
+    "@prismicio/slice-simulator-react": "^0.2.3",
     "@stripe/stripe-js": "^1.52.1",
     "axios": "^1.3.5",
     "faunadb": "^4.8.0",
@@ -21,9 +27,11 @@
     "stripe": "^12.0.0"
   },
   "devDependencies": {
+    "@prismicio/types": "^0.2.7",
     "@types/next-auth": "^3.15.0",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.33",
+    "slice-machine-ui": "^0.7.1",
     "typescript": "^5.0.4"
   }
 }
