--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "faunadb": "^4.8.0",
     "next": "13.3.0",
     "next-auth": "^3.22.0",
+    "prismic-dom": "^2.2.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
@@ -30,6 +31,7 @@
     "@prismicio/types": "^0.2.7",
     "@types/next-auth": "^3.15.0",
     "@types/node": "^18.15.11",
+    "@types/prismic-dom": "^2.1.1",
     "@types/react": "^18.0.33",
     "slice-machine-ui": "^0.7.1",
     "typescript": "^5.0.4"
